--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,6 @@
-STRING_SESSION=
+TG_API_ID=00000000
+TG_API_HASH=00000000000000000000000000000000
+STRING_SESSION=base64_session
 DELAY=10
 TARGET=https://t.me/+yftRUFdddZc1NDkx
 EMOJI=💩
